# DatasetsDeputy

./: .gitignore  README.md  README_CN.md  dev.ps1  index.html  package-lock.json  package.json  publish.ps1  vite.config.ts
public/: splash.html
scripts/: prepare-release.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anthropic.rs  app_dirs.rs  clip_similarity.rs  doubao.rs  errors.rs  file_watcher.rs  folders.rs  gemini.rs  grok.rs  history.rs  lib.rs  llm_loader_settings.rs  lm_studio.rs  main.rs  model_settings.rs  ollama.rs  openai.rs  openai_compatible.rs  proxy_settings.rs  python_env.rs  qwen.rs  request_scheduling.rs  tag_sheet.rs  textgen.rs  thumbnail_settings.rs  wd14_tagger.rs  window_region.rs  window_rendering.rs  zhipu.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/files/: mod.rs
src-tauri/src/thumbnail/: mod.rs  windows_shell.rs
src/components/annotation/: AnnotationExecutionDialog.tsx  BatchAnnotationFormatConversionDialog.tsx  BatchAnnotationNormalizationDialog.tsx  PromptManagementDialog.tsx  (+1 more)
src/i18n/: index.ts
src/lib/: SearchHighlight.tsx  annotationFormatConversion.ts  annotationNormalization.ts  annotationPrompt.ts  annotationXmlBatch.ts  annotations.ts  errors.ts  format.ts  historyLabels.ts  imageSelection.ts  menuLabels.ts  overlayScrollbars.ts  projects.ts  tableCellState.ts  tableDrafts.ts  tauri.ts  theme.ts
src/stores/: datasetStore.ts
src/styles/: globals.css
(+40 files in other folders)
